DuPont DevSB/src/objects/Material_Localization__c.object
<CustomObject>
    <description>Used to manage the translations of material master data, as stored in SAP</description>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>Combination of Material.External_ERP_ID__c + Sales Org Code + Distribution Channel Code + Division Code + Language to idenfy a unique record.</description>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language this record is translated to.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>HE</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JA</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>SK</fullName>
                </value>
                <value>
                    <fullName>SL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Name__c</fullName>
        <description>Translated material name.</description>
        <label>Material Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>Master record that this localization record is the translation of</description>
        <label>Material</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Material Localizations</relationshipLabel>
        <relationshipName>Material_Localizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Text__c</fullName>
        <description>Sales Text in SAP, can be multiple lines, allows sales teams to be more descriptive about a certain material.</description>
        <label>Sales Text</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Material Localization</label>
    <nameField>
        <displayFormat>ML-{0000000000}</displayFormat>
        <label>Material Localization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Localizations</pluralLabel>
    <recordTypes>
        <fullName>Material_Localization</fullName>
        <active>true</active>
        <description>Material Localization</description>
        <label>Material Localization</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>